src/scss/components/base.scss
/* -- Presets & Resets -- */
/* -- Elements -- */
* {
    &,
    &:before,
    &:after {
        box-sizing: border-box;
        font-size: 100%;
        outline: none;
        resize: none;
        border: none;
        padding: 0;
        margin: 0;
    }
}

html,
body {
    transition: background-color .5s ease, color .5s ease;
    text-rendering: optimizeLegibility;
    font-family: $regular-font;

    @include applyTheme(background-color, "background");
    @include applyTheme(color, "dark");
    word-wrap: break-word;
    line-height: 1.15;
    font-weight: 400;
    font-size: 15px;

    @media (max-width: 300px) {
        word-break: break-all;
    }

    &::-webkit-scrollbar {
        display: block;
        width: 6px;
    }

    &::-webkit-scrollbar-track-piece {
        transition: background-color .5s ease;
        background-color: $mid-dark;
        background-color: var(--light, $mid-dark);
    }

    &::-webkit-scrollbar-thumb {
        transition: background-color .5s ease;
        background-color: $light;
        background-color: var(--mid-dark, $primary-light);
    }

    // &::-webkit-scrollbar-track-piece,
    // &::-webkit-scrollbar-thumb {
    //     // border-radius: 5px;
    // }
}

html {
    /* The browser is wostlikely a chromium based browser if it supports overlay */
    @supports (overflow-y: overlay) {
        width: calc(100% - 6px);
        // scroll-behavior: smooth;
    }
}

::selection {
    transition: background-color .5s ease;
    background-color: $primary-dark;
    background-color: var(--primary-dark, $primary-dark);
    color: darken(#fff, 15%);
}

a::selection {
    color: $secondary;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: inherit;
    line-height: 1.15;
    font-weight: 400;
    color: inherit;
    display: block;
}

h1,
.h1 {
    margin: 2.1rem 0 1.68rem 0;
    font-weight: 900;
}

h2,
.h2 {
    margin: 1.78rem 0 1.424rem 0;
    font-weight: 700;
}

h3,
.h3 {
    margin: 1.46rem 0 1.168rem 0;
    font-weight: 600;
}

h4,
.h4 {
    margin: 1.14rem 0 0.912rem 0;
}

h5,
.h5 {
    margin: 0.82rem 0 0.656rem 0;
}

h6,
.h6 {
    margin: 0.5rem 0 0.4rem 0;
}

p,
.p {
    margin: 0 2em 10px 2em;
}

$headerSizes: (4.2rem, 3.56rem, 2.92rem, 2.28rem, 1.64rem, 1rem);

@each $sz in $headerSizes {
    $i: index($headerSizes, $sz);

    h#{$i} {
        font-size: $sz;
    }

    .h#{$i} {
        font-size: $sz !important;
    }
}

img {
    min-height: 200px;
    display: block;
    border: none;
    width: 100%;
}

a {
    color: darken($secondary-dark, 2%);
    color: var(--secondary-light, darken($secondary-dark, 2%));
    text-decoration: none;
    display: inline-block;
    cursor: pointer;

    &:hover,
    &:focus {
        text-decoration: underline;
        color: $secondary;
        color: var(--secondary, $secondary);
    }
}

ul, .ul,
ol, .ol {
    list-style-type: disc;
    margin: 20px 2em;
    display: block;
}

ol, .ol {
    list-style-type: decimal;
}

ul ul, .ul .ul,
ol ul, .ol .ul {
    list-style-type: circle;
}

li, .li {
    text-align: inherit;
    display: list-item;
}

a.skip-main {
    transition: background-color .5s ease, color .5s ease, border-color .35s ease;
    position: absolute;
    overflow: hidden;
    z-index: -999;
    left: -999px;
    height: 1px;
    width: 1px;
    top: auto;

    &:focus,
    &:active {
        border: 2px solid $secondary-light;
        border-color: var(--secondary-light, $secondary-light);
        // color: $secondary-light;
        @include applyTheme(color, "secondary-light");
        @include applyTheme(background-color, "dark");
        transform: translate3d(-50%, 0, 0);
        // background-color: $dark;
        border-radius: 6px;
        text-align: center;
        font-weight: 600;
        margin: 80px auto;
        font-size: 1.2em;
        overflow: auto;
        height: auto;
        padding: 5px;
        z-index: 1999;
        width: 40%;
        left: 50%;
        top: auto;
    }
}

.placeholder-img {
    transition: opacity .9s ease;
    image-rendering: smooth;
    transform: scale(1.2);
    opacity: 1;
}

.core-img, .no-script-img {
    image-rendering: high-quality;
    position: absolute;
    left: 0;
    top: 0;

    &-show {
        & .placeholder-img {
            opacity: 0;
        }
    }
}

.list {
    list-style: circle;
    display: list-item;

    &-none {
        list-style: none;
    }
}

.layer, .footer {
    a.focus-box {
        & {
            text-decoration: underline;
            // padding: 8px;
            // padding-left: 0;
        }

        &:active,
        &:focus {
            border: solid 2px $secondary-light;
            box-shadow: inset 0 0 0 2px #000;
            padding-right: 5px;
            border-radius: 6px;
            padding-left: 5px;
            line-height: 1.5;
        }
    }
}

.footer {
    font-size: 16px;
    line-height: 35px;

    @media #{$screen-size-lt-tablet} {
        font-size: 15px;
    }

    @media #{$screen-size-lt-laptop} {
        padding-right: $size + 10px;
    }
}

@media #{$screen-size-gt-laptop} {
    .footer-stuck {
        position: absolute;
        bottom: 0;
        right: 0;
        left: 0;
    }
}

.back-to-top {
    z-index: 500;
}

